Change password OK

--- a/src/app/pages/user-profile/components/change-password/change-password.component.html
+++ b/src/app/pages/user-profile/components/change-password/change-password.component.html
@@ -1,5 +1,5 @@
 <p-fluid>
-    <p-dialog header="{{'Modifica password' | translate}}"  [style]="{ width: '450px' }"  [modal]="true" [(visible)]="visible" >
+    <p-dialog header="{{'Modifica password' | translate}}"  [style]="{ width: '450px' }" (onShow)="onShow()"  [modal]="true" [(visible)]="visible" >
         <ng-template #content>
             <p-fluid>
                 <form [formGroup]="changePasswordForm">
@@ -13,18 +13,19 @@
                         
                         <div>
                             <label for="name" class="block font-bold mb-3">{{'Nuova password' | translate}}*</label>
-                            <input type="password" pInputText formControlName="password" maxlength="50" required fluid placeholder="{{'Nuova password' | translate}}"/>
+                            <input type="password" pattern="^(?=.*[A-Z])(?=.*[^a-zA-Z0-9]).{8,}$" pInputText formControlName="password" maxlength="50" required fluid placeholder="{{'Nuova password' | translate}}"/>
                             <small class="text-red-500" *ngIf="(password?.touched || password?.dirty) && password?.errors?.['required']">
                             {{'Inserire un valore per la nuova password' | translate}}.</small>
-                            <small class="text-red-500" *ngIf="(password?.touched || password?.dirty) && password?.errors?.['minlength']">
-                            {{'Inserire un valore di almeno 8 caratteri per la nuova password' | translate}}.</small>
+                            <small class="text-red-500" *ngIf="(password?.touched || password?.dirty) && password?.errors?.['minlength']  && password?.errors?.['pattern']">
+                            {{'La password deve avere almeno 8 caratteri, una maiuscola, una minuscola, un numero e un carattere speciale' | translate}}.</small>
                         </div> 
 
                         <div>
                             <label for="name" class="block font-bold mb-3">{{'Ripeti nuova password' | translate}}*</label>
-                            <input type="password" pInputText formControlName="repeatPassword" maxlength="50" required fluid placeholder="{{'Nuova password' | translate}}"/>
+                            <input type="password" pInputText formControlName="repeatPassword" maxlength="50" required fluid
+                                placeholder="{{'Nuova password' | translate}}" />
                             <small class="text-red-500" *ngIf="(repeatPassword?.touched || repeatPassword?.dirty) && repeatPassword?.errors?.['required']">
-                            {{'Inserire un valore per la nuova password' | translate}}.</small>
+                                {{'Inserire un valore per la nuova password' | translate}}.</small>
                             <small class="text-red-500"  *ngIf="(password?.touched || password?.dirty) && (repeatPassword?.touched || repeatPassword?.dirty) && changePasswordForm?.errors?.['newPasswordMustBeEquals']">
                             {{'La nuova password e ripeti password devono coincidere' | translate}}.</small>
                         </div> 
@@ -34,8 +35,8 @@
             </p-fluid>
         </ng-template>
         <ng-template #footer>
-            <p-button label="{{'Annulla' | translate}}" icon="pi pi-times" text (onClick)="close()"  />
-            <p-button label="{{'Conferma' | translate}}" icon="pi pi-check" (onClick)="ok()"  [disabled]="!(this.changePasswordForm.valid)"/>
+            <p-button label="{{'Annulla' | translate}}" icon="pi pi-times" text (onClick)="close()" />
+            <p-button label="{{'Conferma' | translate}}" icon="pi pi-check" (onClick)="ok()" [disabled]="changePasswordForm.invalid" />
         </ng-template>
     </p-dialog>
 </p-fluid>
