Logo change e user

--- a/src/app/layout/component/app.footer.component.html
+++ b/src/app/layout/component/app.footer.component.html
@@ -8,7 +8,7 @@
     }
 
     <div class="layout-footer">
-        RFQ Requests Management {{version}} by
+        Prometheus {{version}} by
         <a href="https://www.acube.ai" target="_blank" rel="noopener noreferrer"
             class="text-primary font-bold hover:underline">Acube</a>
     </div>
