--- a/src/app/layout/component/app.topbar.component.html
+++ b/src/app/layout/component/app.topbar.component.html
@@ -6,7 +6,7 @@
         </button>
         <a class="layout-topbar-logo" routerLink="/">
             <!-- <img src="assets/public/images/AppLogoWhiteBkg.png" alt="logo" class="hidden lg:block" style="width:64px" /> -->
-            <span>RFQ</span>
+            <span>Prometheus</span>
         </a>
     </div>
 
