--- a/src/app/pages/auth/login.component.html
+++ b/src/app/pages/auth/login.component.html
@@ -7,7 +7,7 @@
             <div class="w-full bg-surface-0 dark:bg-surface-900 py-20 px-8 sm:px-20" style="border-radius: 53px">
                 <div class="text-center mb-8">
                     <img src="assets/public/images/AppLogo.png" alt="logo" class="mb-8 w-16 shrink-0 mx-auto" style="width: 128px; height: 128px;border-radius: 5%"/>
-                    <div class="text-surface-900 dark:text-surface-0 text-3xl font-medium mb-4">RFQ Requests Management</div>
+                    <div class="text-surface-900 dark:text-surface-0 text-3xl font-medium mb-4">Prometheus</div>
                     <span class="text-muted-color font-medium">{{"Effettuare l'accesso per proseguire" | translate
                         }}</span>
                 </div>
@@ -20,8 +20,6 @@
                     <p-message severity="error" variant="simple" size="small"
                         *ngIf="formSubmitted && (username?.dirty || username?.touched) && username?.invalid">{{
                         'Inserire la username' | translate}}</p-message>
-
-
                     <label for="password1"
                         class="block text-surface-900 dark:text-surface-0 font-medium text-xl mb-2">Password</label>
                     <p-password id="password1" formControlName="password"
@@ -34,7 +32,6 @@
                         <div class="flex items-center">
                             <p-message severity="error" variant="simple" size="small" *ngIf="showLogInError">{{
                                 'Username o password errati' | translate}}</p-message>
-
                         </div>
                     </div>
                     <p-button label="{{'Accedi' | translate}}" styleClass="w-full" [loading]="this.isLoading" (onClick)="submitLogin()"></p-button>
