--- a/src/app/pages/auth/login.component.html
+++ b/src/app/pages/auth/login.component.html
@@ -6,9 +6,9 @@
             style="border-radius: 56px; padding: 0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%)">
             <div class="w-full bg-surface-0 dark:bg-surface-900 py-20 px-8 sm:px-20" style="border-radius: 53px">
                 <div class="text-center mb-8">
-                    <img src="assets/public/images/AppLogo.png" alt="logo" class="mb-8 w-16 shrink-0 mx-auto" style="width: 128px; height: 128px;border-radius: 5%"/>
-                    <div class="text-surface-900 dark:text-surface-0 text-3xl font-medium mb-4">Prometheus</div>
-                    <span class="text-muted-color font-medium">{{"Effettuare l'accesso per proseguire" | translate
+                    <img src="assets/public/images/AppLogo.png" alt="logo" class="mb-8 w-16 shrink-0 mx-auto" style="width: 256px;border-radius: 5%"/>
+                    <div class="text-surface-900 dark:text-surface-0 text-3xl font-medium mb-4"></div>
+                    <span class="text-muted-color font-bold">{{"Effettuare l'accesso per proseguire" | translate
                         }}</span>
                 </div>
 
